wwr/styles/rafting.css
:root{
    --darkblue: rgba(19, 46, 59, 0.9);
    --lightblue: rgb(84, 156, 188);
    --white: #FFFFFF;
    --gold: rgba(220, 172, 68, 0.8);
    --darkgray: rgb(82, 82, 82);
    --lightgray: rgba(150, 150, 150, 0.9);
    --boxshadow: rgba(0, 0, 0, 0.9);
    --primary-color: var(--darkblue);
    --secondary-color: var(--lightblue);
    --accent1-color: var(--gold);
    --accent2-color: var(--gray);
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    background-color: var(--gray);
}

h1, h2, h3, h4, h5, h6 {font-family: 'Monteserrat', sans-serif; color: var(--white); text-align: center;text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);}
body, p, span, li, div {font-family: 'Dosis', serif; color: rgb(39, 86, 109); font-size: 0.8vw;}

body{
    max-width: 3500px;
    display: grid;
    place-items: center;
}
header{
    display: grid;
    grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
    justify-content: flex-end;
    align-items: center;
    padding: 20px 30px;
    background-color: var(--darkblue);
    width: 100%;
}
.logo-box{
    height: 200px;
    grid-column: 2/3;
}
.logo-box img{
    height: 200px;
    width: auto;
}
nav {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    grid-column: 4 / 5;
}
nav ul{
    list-style: none;
    display: flex;
    justify-content: space-around;
    flex-flow: row wrap;
    align-content: center;
    margin: 0;
    padding: 0;
}
.grid-box{
    display: grid;
    justify-content: space-around;
}
nav ul li{
    margin-left: 20px;
}

nav ul li:first-child{
    margin-left: 0;
}
nav a {
    color: var(--white);
    font-weight: bold;
    font-size: 16px;
}
nav a:hover {
    color: var(--darkgray);
}
main {
    background-color: var(--lightgray);
}
.hero-container {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    justify-content: center;
    align-items: center;
    box-shadow: inset 4px 4px 10px var(--boxshadow);
}
.hero {
    position: relative;
    display:flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: var(--gold);
    width: 100%;
    grid-column: 2 / 3;
}
.hero img{
    display: block;
    width: 80%;
    height: auto;
    padding-left: 20px;
    order: 1;
}
.background{
    max-height: 1200px;
    max-width: 1200px;
}
.hero h1,
.hero article{
    position: absolute;
    display: flex;
    padding-left: 160px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}
.hero h1{
    top: 20%;
}
.hero article p{
    color: whitesmoke;
    text-shadow: 2px 2px 8px var(--boxshadow);
    font-size: 140%;
    font-weight: bold;
    margin-top: 10px;
    top: 120px;
}
.hero article{
    top: 60%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    text-align: left;
    width: 65%;
    background-color: rgba(0, 0, 0, 0.2);
}
.hero article img{
    width: 120%;
    float:right;
}
.hero article::after {
    content: "";
    display: block;
    clear: both;
}
.history {
    background-color: var(--darkblue);
    padding-top: 1%;
    padding-bottom: 1%;
    box-shadow: inset 4px 4px 10px var(--boxshadow)
}
.history .p-holder{
    display: flex;
    flex-direction: row;
    align-items: center;
}
.history p{
    color: var(--white);
    padding-left: 2%;
    padding-right: 2%;
    padding-bottom: 2%;
    font-size: 140%;
}
.history img{
    width: 20%;
    height: auto;
}
.adventure {
    background-color: var(--lightblue);
    box-shadow: inset 4px 4px 10px var(--boxshadow);
    justify-content: space-between
}
.adventure h2{
    padding-top: 1%;
}
.adventure figcaption{
    color: var(--white);
    font-weight: bold;
    text-align: center;
}
.image-gallary{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding: 20px;
}
.display img{
    width: 100%;
    height: auto;
    box-shadow: inset 4px 4px 10px var(--boxshadow)
}
.display-crew img{
    height: auto;
    width: 100%;
    box-shadow: inset 4px 4px 10px var(--boxshadow)
}
.display-santa{
    height: auto;
    width: 100%;
}
.display-santa img{
    width: 100%;
    height: auto;
}
.display-santa:hover{
    z-index: 1;
}
.display-santa img:hover {
    width: 150%;
}
.display:hover{
    z-index: 1;
}
.display img:hover {
    height: auto;
    width: 120%;
}
footer{
    display: grid;
    grid-template-columns: 90% 10%;
    background-color: var(--white);
    text-align: center;
    padding: 10px 20px;
    width: 100%;
}
#social{
    text-decoration: none;
}
.social-logos{
    display: flex;
    flex-direction: row-reverse;
    margin-bottom: 10px;
}
.icon{
    margin: 0 15px;
    display: inline-block;
}
.icon img{
    width: 30px;
    height: 30px;
    transition: opacity 0.3s;
}
.icon:hover img{
    opacity: 0.7;
}

